lots of changes

--- a/app/globals.css
+++ b/app/globals.css
@@ -24,8 +24,11 @@ body {
 }
 
 .flex-column {
-  @apply flex items-center flex-col
+  @apply flex flex-col items-center;
 }
 .header-button {
-  @apply rounded-md px-4 py-2 transition duration-300 hover:bg-amber-600
+  @apply rounded-md px-4 py-2 text-stone-800 transition duration-300 hover:bg-amber-600 focus:bg-amber-600 active:bg-amber-600;
+}
+.link {
+  @apply text-blue-800 underline;
 }
