--- a/app/globals.css
+++ b/app/globals.css
@@ -6,6 +6,7 @@
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
   --background-end-rgb: 255, 255, 255;
+  --sunrise-progress-green: rgba(34, 197, 94, 1);
 }
 
 @media (prefers-color-scheme: dark) {
@@ -29,6 +30,9 @@ body {
 
 .flex-column {
   @apply flex flex-col items-center;
+}
+.progress-number {
+  @apply text-sunrise-progress-green font-bold;
 }
 .header-link {
   @apply rounded-md px-4 py-2 text-center text-stone-800 transition duration-300 hover:bg-amber-600 focus:bg-amber-600 active:bg-amber-600;
