--- a/app/globals.css
+++ b/app/globals.css
@@ -34,6 +34,9 @@ body {
 .progress-number {
   @apply text-sunrise-progress-green font-bold;
 }
+.category-icon {
+  @apply flex items-center justify-center text-3xl;
+}
 .header-link {
   @apply rounded-md px-4 py-2 text-center text-stone-800 transition duration-300 hover:bg-amber-600 focus:bg-amber-600 active:bg-amber-600;
 }
