--- a/app/globals.css
+++ b/app/globals.css
@@ -38,7 +38,7 @@ body {
   @apply flex items-center justify-center text-3xl;
 }
 .header-link {
-  @apply rounded-md px-4 py-2 text-center text-stone-800 transition duration-300 hover:bg-amber-600 focus:bg-amber-600 active:bg-amber-600;
+  @apply cursor-pointer rounded-md px-4 py-2 text-center text-stone-800 transition duration-300 hover:bg-amber-600 focus:bg-amber-600 active:bg-amber-600;
 }
 .link {
   @apply bg-amber-600;
